# jekyll-sharepoint

./: .gitignore  LICENSE  README.md  config.py  create_template.py  list.py  local_api.py  pyproject.toml  show.py  sync.py
jekpoint/: api.py  auth.py  cli.py  config.py  html.py  sync_sharepoint.py
jekpoint/commands/: create_template.py  list.py  list_files.py  show.py  sync.py
sharepoint_html/: __init__.py
sync/: jekyll.py  sharepoint.py
