[tool.poetry]
name = "jekyll-sharepoint"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
python-dotenv = "^0.17.0"
beautifulsoup4 = "^4.9.3"
adal = "^1.2.7"
Office365-REST-Python-Client = "^2.3.2"
pyhumps = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
